--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 	<div class="grid-1 tablet-2">
 		<div class="col col-1">
 			<div class="text-block spanish">
-				<h2 class="heading--l italic">Auténticas y FRESCAS</h2>
+				<h2 class="heading--l bold italic">Auténticas y FRESCAS</h2>
 				salchichas al estilo hispano. Preparadas cada día, localmente, con los mas finos ingredientes y entregadas, FRESCAS sin congelar, en tu tienda más cercana. <br>
 				<br>
 				Naturales. Sin Preservantes. Sin Nitratos. <br>
@@ -15,7 +15,7 @@ layout: default
 		</div>
 		<div class="col col-1">
 			<div class="text-block english">
-				<h2 class="heading--l italic">Authentic Hispanic Style FRESH</h2>
+				<h2 class="heading--l bold italic">Authentic Hispanic Style FRESH</h2>
 				Sausages! Made daily locally from only the finest ingredients and delivered FRESH, not frozen, to your neighborhood store.<br>
 				<br>
 				Natural. No Preservatives. <br>
@@ -27,7 +27,7 @@ layout: default
 </div>
 <div class="container">
 	<div class="block">
-		<h3>Productos/Products</h3>
+		<h3 class="heading--l tan">Productos/Products</h3>
 		<div class="grid-1 tablet-4">
 			<div class="col col-1">
 				<img src="assets/img/chorizo_gourmet.png" alt="">
