added new image to page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@ layout: default
 <div class="container">
 	<div class="block">
 		<h3 class="heading--l tan">Productos/Products</h3>
-		<div class="grid-1 tablet-4">
+		<div class="grid-1 tablet-5">
+			<div class="col col-1">
+				<img src="assets/img/albondigas_de_estilo_mexicano.jpg" alt="">
+			</div>
 			<div class="col col-1">
 				<img src="assets/img/chorizo_gourmet.png" alt="">
 			</div>
